--- a/index.html
+++ b/index.html
@@ -7,6 +7,53 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
+    <div id="game-text">
+        <h1>
+            Player O's Turn
+        </h1>
+    </div>
+    <div id="game-area">
+        <div class="player">
+            <h3>Name: O </h3>
+            <h3>Score: 5 Wins</h3>
+        </div>
+        <div id="board">
+            <div class="box">
+                <p class="symbol-text">X</p>
+            </div>
+            <div class="box">
+                <p class="symbol-text">O</p>
+            </div>
+            <div class="box">
+                <p class="symbol-text">X</p>
+            </div>
+            <div class="box">
+                <p class="symbol-text">X</p>
+            </div>
+            <div class="box">
+                <p class="symbol-text">X</p>
+            </div>
+            <div class="box">
+                <p class="symbol-text">X</p>
+            </div>
+            <div class="box">
+                <p class="symbol-text">X</p>
+            </div>
+            <div class="box">
+                <p class="symbol-text">X</p>
+            </div>
+            <div class="box">
+                <p class="symbol-text">X</p>
+            </div>
+        </div>
+        <div class="player">
+            <h3>Name: X </h3>
+            <h3>Score: 5 Wins</h3>
+        </div>
+    </div>
+    <div id="button-area">
+        <button id="restart">Restart</button>
+    </div>
 </body>
 </html>
