--- a/index.html
+++ b/index.html
@@ -19,32 +19,32 @@
             <h3>Score: 5 Wins</h3>
         </div>
         <div id="board">
-            <div class="box">
+            <div class="box" id="box-1">
                 <p class="symbol-text">X</p>
             </div>
-            <div class="box">
+            <div class="box" id="box-2">
+                <p class="symbol-text">X</p>
+            </div>
+            <div class="box" id="box-3">
+                <p class="symbol-text">X</p>
+            </div>
+            <div class="box" id="box-4">
+                <p class="symbol-text">X</p>
+            </div>
+            <div class="box" id="box-5">
+                <p class="symbol-text">X</p>
+            </div>
+            <div class="box" id="box-6">
+                <p class="symbol-text">X</p>
+            </div>
+            <div class="box" id="box-7">
+                <p class="symbol-text">X</p>
+            </div>
+            <div class="box" id="box-8">
+                <p class="symbol-text">X</p>
+            </div>
+            <div class="box" id="box-9">
                 <p class="symbol-text">O</p>
-            </div>
-            <div class="box">
-                <p class="symbol-text">X</p>
-            </div>
-            <div class="box">
-                <p class="symbol-text">X</p>
-            </div>
-            <div class="box">
-                <p class="symbol-text">X</p>
-            </div>
-            <div class="box">
-                <p class="symbol-text">X</p>
-            </div>
-            <div class="box">
-                <p class="symbol-text">X</p>
-            </div>
-            <div class="box">
-                <p class="symbol-text">X</p>
-            </div>
-            <div class="box">
-                <p class="symbol-text">X</p>
             </div>
         </div>
         <div class="player">
