Board now interactive and works for one game
Console version removed. TODO: Replay button, change Name button, cleaning up code

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <script src="./script.js" defer></script>
-    <div id="game-text">
-        <h1>
+    <div>
+        <h1 id="game-text">
             Player O's Turn
         </h1>
     </div>
@@ -19,31 +19,31 @@
             <h3>Score: 5 Wins</h3>
         </div>
         <div id="board">
-            <div class="box" id="box-1">
+            <div class="box" box-number=1>
                 <p class="symbol-text">X</p>
             </div>
-            <div class="box" id="box-2">
+            <div class="box" box-number=2>
                 <p class="symbol-text">X</p>
             </div>
-            <div class="box" id="box-3">
+            <div class="box" box-number=3>
                 <p class="symbol-text">X</p>
             </div>
-            <div class="box" id="box-4">
+            <div class="box" box-number=4>
                 <p class="symbol-text">X</p>
             </div>
-            <div class="box" id="box-5">
+            <div class="box" box-number=5>
                 <p class="symbol-text">X</p>
             </div>
-            <div class="box" id="box-6">
+            <div class="box" box-number=6>
                 <p class="symbol-text">X</p>
             </div>
-            <div class="box" id="box-7">
+            <div class="box" box-number=7>
                 <p class="symbol-text">X</p>
             </div>
-            <div class="box" id="box-8">
+            <div class="box" box-number=8>
                 <p class="symbol-text">X</p>
             </div>
-            <div class="box" id="box-9">
+            <div class="box" box-number=9>
                 <p class="symbol-text">O</p>
             </div>
         </div>
