--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
     </div>
     <div id="game-area">
         <div class="stat-container" id="player-O">
-            <h3 class="name">Name: O</h3>
-            <h3 class="score">Score: 5 Wins</h3>
+            <div>
+                <h3 class="name">Name: O</h3>
+                <h3 class="score">Score: 5 Wins</h3>
+            </div>
+            <div class="box">
+                <p class="symbol-text">O</p>
+            </div>
         </div>
         <div id="board">
             <div class="box" box-number=1>
@@ -72,8 +77,13 @@
             </div>
         </div>
         <div class="stat-container" id="player-X">
-            <h3 class="name">Name: X</h3>
-            <h3 class="score">Score: 5 Wins</h3>
+            <div>
+                <h3 class="name">Name: X</h3>
+                <h3 class="score">Score: 5 Wins</h3>
+            </div>
+            <div class="box">
+                <p class="symbol-text">X</p>
+            </div>
         </div>
     </div>
     <button id="restart">Restart</button>
