--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
     </dialog>
     <div>
         <h1 id="game-text">
+            <!--have to be here since displayTurn not work preinitialize, may fix-->
             (O) Player O's Turn
         </h1>
     </div>
     <div id="game-area">
         <div class="stat-container" id="player-O">
             <div>
-                <h3 class="name">Name: O</h3>
-                <h3 class="score">Score: 5 Wins</h3>
+                <h3 class="name"></h3>
+                <h3 class="score"></h3>
             </div>
             <div class="box">
                 <p class="symbol-text">O</p>
@@ -49,37 +50,37 @@
         </div>
         <div id="board">
             <div class="box" box-number=1>
-                <p class="symbol-text">X</p>
+                <p class="symbol-text"></p>
             </div>
             <div class="box" box-number=2>
-                <p class="symbol-text">X</p>
+                <p class="symbol-text"></p>
             </div>
             <div class="box" box-number=3>
-                <p class="symbol-text">X</p>
+                <p class="symbol-text"></p>
             </div>
             <div class="box" box-number=4>
-                <p class="symbol-text">X</p>
+                <p class="symbol-text"></p>
             </div>
             <div class="box" box-number=5>
-                <p class="symbol-text">X</p>
+                <p class="symbol-text"></p>
             </div>
             <div class="box" box-number=6>
-                <p class="symbol-text">X</p>
+                <p class="symbol-text"></p>
             </div>
             <div class="box" box-number=7>
-                <p class="symbol-text">X</p>
+                <p class="symbol-text"></p>
             </div>
             <div class="box" box-number=8>
-                <p class="symbol-text">X</p>
+                <p class="symbol-text"></p>
             </div>
             <div class="box" box-number=9>
-                <p class="symbol-text">O</p>
+                <p class="symbol-text"></p>
             </div>
         </div>
         <div class="stat-container" id="player-X">
             <div>
-                <h3 class="name">Name: X</h3>
-                <h3 class="score">Score: 5 Wins</h3>
+                <h3 class="name"></h3>
+                <h3 class="score"></h3>
             </div>
             <div class="box">
                 <p class="symbol-text">X</p>
